--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,99 +1,16 @@
-*{
-	margin:0;padding:0;
-}
-a {
-	color: #fff;
-	text-decoration: underline;
-}
-a:hover{
-	text-decoration: none;
-}
-h1, h2, h3, p{
-	font-family: "Lato";
-	margin: 5px;
-	color: #ffffff;	
-}
-h2, h3, p{
-	font-weight: 900;
-}
-h1{
-	font-size: 60px;
-}
-@media screen and (max-width: 1590px){
-	h1{
-	font-size: 40px;
-	}
-}
-@media screen and (max-width: 800px){
-		h1{
-	font-size: 35px;
-	margin-top: 10px;
-	}
-}
-h3{
-	font-size: 30px;
-	font-family: calibri, arial;
-	font-weight: 100;
-}
-@media screen and (max-width: 1590px){
-	h3{
-	font-size: 20px;
-	}
-}
-@media screen and (max-width: 800px){
-	h3{
-	font-size: 15px;
-	}
-}
-p{
-	font-size: 23px;
-	font-family: calibri, arial;
-	font-weight: 100;
-}
-@media screen and (max-width: 800px){
-	p{
-		font-size: 15px;
-	}
-}
+/*Homepage CSS - sayincaps.com*/
 
-section{
-	width: 45%;
-	margin: auto;
-}
-@media screen and (max-width: 1590px){
-	section{
-		width: 65%;
-	}
-}
-@media screen and (max-width: 800px){
-	section{
-		width: 100%;
-	}
-}
-header{
-	text-align: left;
-	margin-bottom: 80px;
-}
-@media screen and (max-width: 800px){
-	header{
-		margin-bottom: 20px;
-	}
-}
-form{
-	text-align: center;
-	width: 100%;
-}
-#social{
-	
-}
+/**************
+	#SOCIAL BUTTONS
+***************/
 #twitter-share-button{
 	float: left;
 	overflow: hidden;
 	position: absolute;
 	top: 20px;
 	right:40px;
-
-	margin: 0;padding: 0;
+	margin: 0;
+	padding: 0;
 }
 .fb-share-button{
 	float: left;
@@ -105,18 +22,21 @@ form{
 	margin: 0;padding: 0;
 	text-align: right;
 }
+
+/*Hide on mobile*/
 @media screen and (max-width: 800px){
 	#social{
 		display: none;
 	}
 }
+/*********************************************************/
+
 footer{
 	float: left;
 	overflow: hidden;
-	position: absolute;
-	bottom: 0px;
 	width: 100%;
-	margin: 0;padding: 0;
+	margin: 10px 0 0 0;
+	padding: 0;
 	text-align: center;
 }
 footer p{
